	- add a HAVE_STRERROR definition to the config files and roll out
	  our own strerror() function if needed
	- clean up the header files:
	  - remove "extern" before the function prototypes
	  - declare all the hexer functions and variables used by
	    other modules
	  - add several header files so that all hexer functions and
	    variables are declared
	  - use ANSI prototypes for all functions
	  - let the prototypes for some functions catch up with reality
	- clean up the source files:
	  - remove the "extern" definitions for the standard C library
	    functions - just include the header files instead
	  - replace the "extern" definitions for hexer functions and
	    variables with the appropriate includes
	  - fix various C compiler warnings
	  - use ANSI prototypes for the already-prototyped static functions
	  - fix some function definitions and calls to match the prototypes
	- clean up the Makefile:
	  - allow the user to override most of the variables
	  - no need to ignore the result of "rm -f" :)
	  - use CFLAGS when building bin2c
	  - do not try to follow dependencies for termlib.c
	  - simplify the "install" target and honor DESTDIR if set
	- rename the KEY_* constants to HXKEY_* to avoid conflicts with
	  the curses header files
	- add an "hx_" prefix to the "lines", "columns", and
	  "insert_character" variables for the same reason
	- garbage-collect some unused functions
	- fix the manual page syntax:
	  - fix the comment markers
	  - mark the hyphens as such where needed
	- remove some hyphenation in the help text
	- switch the Makefile to use curses by default
	- link with the math library for pow(3) used in the calculator
	- rename the TERMCAP and TERMLIB Makefile variables to LTERMCAP
	  and LTERMLIB; the TERMCAP environment variable is actually
	  defined in some environments, and it is definitely not
	  a linker library specification!

0.1.4c
	- the last version released by Sascha Demetrio <demetrio@cs.uni-sb.de>