@@ -11,6 +11,7 @@
 #define HAVE_ALLOCA          1
 #define NEED_ALLOCA_H        1
 #define HAVE_STRERROR        1
+#define HAVE_VASPRINTF       1
 
 #define USE_STDARG           1
 
