@@ -46,6 +46,12 @@ Change log for hexer, the multi-view binary editor
 	  and LTERMLIB; the TERMCAP environment variable is actually
 	  defined in some environments, and it is definitely not
 	  a linker library specification!
+	- fix a case of undefined behavior in tio.c: the v*printf()
+	  routines may NOT be called a second time with the same
+	  varargs list!  Add a HAVE_VASPRINTF definition and enable it
+	  on Linux systems; it is also available on modern BSD's, but
+	  the config.bsd file needs a lot of updating anyway.
+	  Reported by: Michael Gold <mgold@ncf.ca> in Debian bug #540571
 
 0.1.4c
 	- the last version released by Sascha Demetrio <demetrio@cs.uni-sb.de>
